<resources>
    <!--HOME PAGE-->
    <string name="app_name_main">Mobile</string>
    <string name="mainHelpMenu">Help Menu</string>
    <string name="mainHelpMenuMessage">Click on one of the icons to be redirected to one of our four applications!</string>
    <string name="dictionarySearch">Dictionary API</string>
    <string name="sunriseSunsetSearch">Sunrise and Sunset Lookup</string>
    <string name="recipeSearch">Recipe Search</string>
    <string name="songSearch">Deezer Song Search API</string>
    <string name="className">CST2335 Lab 012</string>
    <string name="subtitle">Created by:</string>
    <string name="name1">Yasaman Bahramifarid</string>v
    <string name="name2">Fereshteh Rohani</string>
    <string name="name3">Mohammad Salaudeen</string>
    <string name="name4">Jennifer Goodchild</string>
    <string name="topic">Final Mobile Project</string>
    <string name="welcome">Welcome!</string>

    <!--DICTIONARY-->
    <string name="app_name">DICTIONARY</string>
    <string name="searchInput">Enter a word</string>
    <string name="searchButton">SEARCH</string>
    <string name="viewSavedButton">VIEW SAVED </string>
    <string name="myToolbar">DICTIONARY</string>
    <string name="searched_term">Searched Term</string>
    <string name="definition">definition</string>
    <string name="helpMenu">Help Menu</string>
    <string name="helpMenuMessage">Enter a word to search and click search. You can then save the word from the search results.</string>
    <string name="positiveButton">OK</string>
    <string name="home">Home</string>
    <string name="saved">View Saved</string>
    <string name="about">About</string>
    <string name="phonetic">Phonetic</string>
    <string name="savedPage">Saved Terms</string>

    <!--SUNRISE AND SUNSET-->
    <string name="sun_app">Sunrise and Sunset</string>
    <string name="lookup">Lookup</string>
    <string name="allLocations">All Favourite Locations</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="the_sun_will_rise_at">The sun will rise at:</string>
    <string name="the_sun_will_set_at">The sun will set at:</string>
    <string name="add_to_favorite_locations">Add to Favorite Locations</string>

    <!--SONG-->
    <string name="app_name_song">Deezer API Search</string>
    <string name="welcome_message">Welcome to Deezer API Search, Completed by Mohammad Salaudeen</string>

    <!--RECIPE-->
    <string name="app_name_recipe">Recipe Search</string>
    <string name="fyi">Welcome! Enter a recipe you would like to search for below.</string>
    <string name="hint">tacos, pancakes, meatloaf...</string>
    <string name="search">Search</string>
    <string name="loading">Loading...</string>
    <string name="searchRecipe">Search Recipe</string>
    <string name="homeRecipe">Home</string>
    <string name="aboutRecipe">About</string>
    <string name="help_menu">Help Menu</string>
    <string name="help_message">Enter a recipe to search for and click the search button.</string>
    <string name="ok">OK!</string>
</resources>