<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/mainHome"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/dictionarySearch"
        android:icon="@drawable/mainDictionary"
        android:title="@string/dictionarySearch"
        app:showAsAction="always" />

    <item
        android:id="@+id/sunriseSunsetSearch"
        android:icon="@drawable/mainSun"
        android:title="@string/sunriseSunsetSearch"
        app:showAsAction="always" />

    <item
        android:id="@+id/recipeSearch"
        android:icon="@drawable/mainRecipe"
        android:title="@string/recipeSearch"
        app:showAsAction="always" />

    <item
        android:id="@+id/songSearch"
        android:icon="@drawable/mainSong"
        android:title="@string/songSearch"
        app:showAsAction="always" />

    <item
        android:id="@+id/threeDots"
        android:title="@string/about"
        android:background="#B3C6AB"
        app:showAsAction="never" />

</menu>